feat: add authorization for get user endpoint
