# src/MainService/docs/swagger.json
@@ -937,6 +937,38 @@
                 }
             }
         },
+        "/users/authorize": {
+            "get": {
+                "description": "Retrieves a User by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get a User by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/View.UserViewID"
+                        }
+                    }
+                }
+            }
+        },
         "/users/payment/user_wallet": {
             "get": {
                 "description": "Payment",
@@ -1003,36 +1035,6 @@
             }
         },
         "/users/{id}": {
-            "get": {
-                "description": "Retrieves a User by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Get a User by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/View.UserViewID"
-                        }
-                    }
-                }
-            },
             "delete": {
                 "description": "Deletes a User by ID",
                 "consumes": [
@@ -1775,6 +1777,9 @@
                     "items": {
                         "$ref": "#/definitions/Model.Address"
                     }
+                },
+                "award": {
+                    "type": "number"
                 },
                 "categories": {
                     "type": "array",
